# ondemand-storm-workflow

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
singularity/info/: environment.yml  info.def
singularity/info/files/: hurricane_data.py
singularity/ocsmesh/files/: hurricane_mesh.py
singularity/post/files/: ROC_single_run.py  max_ele_vs_hwm.py
singularity/prep/: environment.yml  prep.def
singularity/prep/files/: analyze_ensemble.py  combine_ensemble.py  setup_ensemble.py  setup_model.py  wwm.py
singularity/scripts/: build.sh  input.conf  mesh.sbatch  post.sbatch  prep.sbatch  schism.sbatch  workflow.sh
stormworkflow/: main.py  wwm.py
stormworkflow/post/: ROC_single_run.py  analyze_ensemble.py  combine_ensemble.py  storm_roc_curve.py  storm_roc_ts_curves.py  storm_roc_ts_rel_curves.py
stormworkflow/prep/: download_data.py  hurricane_data.py  hurricane_mesh.py  setup_ensemble.py  setup_model.py  wwm.py
stormworkflow/refs/: input.yaml
stormworkflow/scripts/: input.conf  workflow.sh
stormworkflow/slurm/: mesh.sbatch  post.sbatch  prep.sbatch  schism.sbatch
tests/: conftest.py  test.sh  test_input_version.py  test_prep_funcs.py
tests/data/refs/: input_v0.0.3.yaml  input_v0.0.4.yaml  input_v0.0.5.yaml  leadtime.json
